# news-app-server

./: .dockerignore  .env.local.example  .env.prod.example  .gitignore  ARCHITECTURE.html  ARCHITECTURE.md  ARCHITECTURE_FOR_JUNIORS.md  CODEBASE_GUIDE.md  Dockerfile  GUIDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
ai-news-service/: ARCHITECTURE.md  CODEBASE_GUIDE.md  README.md  pyproject.toml
ai-news-service/app/: main.py
ai-news-service/app/api/: routes_filter_articles.py  routes_ingest.py  routes_sources.py
ai-news-service/app/core/: config.py  database.py  deps.py
ai-news-service/app/middleware/: internal_auth.py
ai-news-service/app/models/: base.py  (+3 more)
api-getway/: main.py  pyproject.toml
api-getway/app/: main.py
app/: main.py
app/api/: routes_ai.py  routes_ai_providers.py  routes_articles.py  routes_filter_articles.py  routes_final_articles.py  routes_ingest.py  routes_master_data.py  routes_post_processed.py  routes_raw_ingestion.py  routes_sources.py  safety_guard.py
app/core/: config.py  database.py  deps.py  enums.py  rate_limit.py  redis.py
app/models/: __init__.py  ai_provider.py  article.py  article_chunk.py  base.py  category.py  filter_article.py  final_article.py  location.py  post_processed_article.py  raw_event.py  source.py
app/repositories/: ai_provider_repo.py  article_repo.py  chunk_repo.py  filter_article_repo.py  final_article_repo.py  master_data_repo.py  post_processed_article_repo.py  raw_ingestion_repo.py  source_repo.py
app/schemas/: ai_provider_schema.py  ai_schema.py  article_schema.py  final_article_schema.py  master_data_schema.py  source_schema.py
app/services/: ingestion_service.py  publishing_service.py  scheduler.py  source_normalizer.py
auth-service/: ARCHITECTURE.MD  pyproject.toml
auth-service/app/: main.py
auth-service/app/api/v1/: auth_router.py
auth-service/app/core/: config.py  constants.py  enums.py  otp.py  security.py
auth-service/app/models/: __init__.py  access_log.py  base.py  mixins.py  otp.py  refresh_token.py  users.py
auth-service/app/oauth/: google.py  oauth.py
auth-service/app/repositories/: access_logs_repo.py  otp_repo.py  refresh_token_repo.py  user_repo.py
auth-service/app/schemas/: auth_schema.py
auth-service/app/services/: access_log_service.py  auth_service.py  notification_email_service.py  otp_service.py  token_service.py  user_service.py
auth-service/app/templates/: otp_email.html
auth-service/migrations/: env.py
auth-service/migrations/versions/: 7f634735328f_add_pending_to_userstatus_enum.py  9d0afd75cbd5_initial_auth_tables.py  d6a7d7c23666_all_tables_fk_modified_related_to_user.py
docs/design/: ai-news-intelligence.md  hybrid-retrieval.md
migrations/: env.py
migrations/versions/: 438e91b56a06_modified_filter_article_table_structure_.py  a1b2c3d4e5f6_article_chunks_pgvector.py  b2c3d4e5f6a7_article_chunks_fts.py  d9e4f5a6b789_add_ai_provider_configs.py  df03e71d60a7_modified_filter_article_table_structure.py  f2g3h4i5j678_add_article_card_fields.py  g3h4i5j6k789_widen_normalized_by.py  j6k7l8m9n012_pipeline_enhancements.py  k7l8m9n0o123_filtered_articles_cleanup.py  l8m9n0o1p234_performance_indexes.py
scripts/: eval_ragas.py  eval_retrieval.py
tests/: conftest.py  test_agent_tools.py  test_ai_routes.py  test_ai_schema.py  test_chunking.py  test_eval_metrics.py  test_rag_service.py  test_retrieval_service.py  test_rrf.py  test_safety.py
(+53 files in other folders)
