[project]
name = "news-app-backend"
version = "0.1.0"
description = "A backend application for fetching and serving news articles."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.43.0",
    "apscheduler>=3.10.0",
    "openai>=1.54.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.129.0",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
    # LangGraph enrichment agent + Gemini
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "ddgs>=9.0.0",
    "boto3>=1.42.73",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]
