[project]
name = "news-app-backend"
version = "0.1.0"
description = "A backend application for fetching and serving news articles."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.129.0",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
    # AI News Intelligence layer
    "openai>=1.54.0",
    "pgvector>=0.3.6",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.8",
    "langgraph>=0.2.45",
    "redis>=5.0.0",
]

[project.optional-dependencies]
# Generation-quality evaluation (RAGAS). Heavy; not needed to run the app.
#   uv sync --extra eval
eval = [
    "ragas>=0.2.0",
    "datasets>=3.0.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
